feat: add swagger for api docs
