# backend/controllers/auth.controller.go
@@ -38,13 +38,23 @@ type registerEmployeeRequest struct {
 	Password  string        `json:"password" binding:"required,min=6"`
 }
 
-// RegisterEmployee: api/auth/register 従業員登録（権限: Admin）
+// RegisterAccount godoc
+// @Summary      従業員登録（管理者 Admin Only）
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param request body registerEmployeeRequest true "Request body"
+// @Success      201  {object}  EmployeeResponse
+// @Failure      400  {object}   utils.ErrorResponse
+// @Failure      401  {object}   utils.ErrorResponse
+// @Failure      500  {object}   utils.ErrorResponse
+// @Router       /auth/register [post]
 func (ac *AuthController) RegisterEmployee(ctx *gin.Context) {
 	var req registerEmployeeRequest
 
 	// application/jsonでレスポンスを返したいため、ShouldBindJSON
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -52,13 +62,13 @@ func (ac *AuthController) RegisterEmployee(ctx *gin.Context) {
 	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
 	if !authPayload.IsAdmin {
 		err := errors.New("you do not have permission")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	hashedPassword, err := utils.HashPassword(req.Password)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -75,7 +85,7 @@ func (ac *AuthController) RegisterEmployee(ctx *gin.Context) {
 
 	employee, err := ac.store.CreateEmployee(ctx, args)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -97,13 +107,24 @@ type logInEmployeeResponse struct {
 	User                  EmployeeResponse `json:"user"`
 }
 
-// LogInEmployee: api/auth/login ユーザー認証
+// LogInEmployee godoc
+// @Summary      従業員認証
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param request body logInEmployeeRequest true "Request body"
+// @Success      200  {object}  logInEmployeeResponse
+// @Failure      400  {object}   utils.ErrorResponse
+// @Failure      401  {object}   utils.ErrorResponse
+// @Failure      404  {object}   utils.ErrorResponse
+// @Failure      500  {object}   utils.ErrorResponse
+// @Router       /auth/login [post]
 func (ac *AuthController) LogInEmployee(ctx *gin.Context) {
 	var req logInEmployeeRequest
 
 	// application/jsonでレスポンスを返したいため、ShouldBindJSON
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -112,30 +133,30 @@ func (ac *AuthController) LogInEmployee(ctx *gin.Context) {
 	if err != nil {
 		if err == sql.ErrNoRows {
 			// ユーザーが存在しない場合404エラーを返す
-			ctx.JSON(http.StatusNotFound, utils.ErrorResponse(err))
+			ctx.JSON(http.StatusNotFound, utils.CreateErrorResponse(err))
 			return
 		}
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	err = utils.CheckPassword(req.Password, employee.HashedPassword)
 	if err != nil {
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// アクセストークンを作成
 	accessToken, accessPayload, err := ac.TokenMaker.CreateToken(employee.ID.String(), employee.IsAdmin, ac.config.AccessTokenDuration)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// リフレッシュトークンを作成
 	refreshToken, refreshPayload, err := ac.TokenMaker.CreateToken(employee.ID.String(), employee.IsAdmin, ac.config.RefreshTokenDuration)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -148,7 +169,7 @@ func (ac *AuthController) LogInEmployee(ctx *gin.Context) {
 		ExpiresAt:    refreshPayload.ExpiredAt,
 	})
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -173,17 +194,29 @@ type refreshAccessTokenResponse struct {
 	AccessTokenExpiresAt time.Time `json:"access_token_expires_at"`
 }
 
+// RefreshAccessToken godoc
+// @Summary      トークンのリフレッシュ
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param request body refreshAccessTokenRequest true "Request body"
+// @Success      200  {object}  refreshAccessTokenResponse
+// @Failure      400  {object}   utils.ErrorResponse
+// @Failure      401  {object}   utils.ErrorResponse
+// @Failure      404  {object}   utils.ErrorResponse
+// @Failure      500  {object}   utils.ErrorResponse
+// @Router       /auth/refresh [post]
 func (ac *AuthController) RefreshAccessToken(ctx *gin.Context) {
 	var req refreshAccessTokenRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// リフレッシュトークンを検証
 	refreshPayload, err := ac.TokenMaker.VerifyToken(req.RefreshToken)
 	if err != nil {
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -191,44 +224,44 @@ func (ac *AuthController) RefreshAccessToken(ctx *gin.Context) {
 	session, err := ac.store.GetSession(ctx, refreshPayload.ID)
 	if err != nil {
 		if err == sql.ErrNoRows {
-			ctx.JSON(http.StatusNotFound, utils.ErrorResponse(err))
+			ctx.JSON(http.StatusNotFound, utils.CreateErrorResponse(err))
 			return
 		}
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// セッションがブロックされているか確認
 	if session.IsBlocked {
 		err := fmt.Errorf("blocked session")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// セッションのユーザーとリフレッシュトークンのユーザーが一致するか確認
 	if session.EmployeeID.String() != refreshPayload.EmployeeID {
 		err := fmt.Errorf("incorrect session user")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// セッションのリフレッシュトークンとリクエストのリフレッシュトークンが一致するか確認
 	if session.RefreshToken != req.RefreshToken {
 		err := fmt.Errorf("incorrect session refresh token")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// リフレッシュトークンが有効期限切れか確認
 	if time.Now().After(session.ExpiresAt) {
 		err := fmt.Errorf("refresh token expired")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	accessToken, accessPayload, err := ac.TokenMaker.CreateToken(refreshPayload.EmployeeID, refreshPayload.IsAdmin, ac.config.AccessTokenDuration)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
