# backend/controllers/clockins.controller.go
@@ -32,44 +32,54 @@ type reqCreateClockIn struct {
 	EmployeeID string `json:"employee_id" binding:"required"`
 }
 
-// POST: api/clockins 出勤打刻
+// RefreshAccessToken godoc
+// @Summary      出勤打刻
+// @Tags         clockins
+// @Accept       json
+// @Produce      json
+// @Param request body reqCreateClockIn true "Request body"
+// @Success      201  {object}  db.ClockIn
+// @Failure      400  {object}   utils.ErrorResponse
+// @Failure      401  {object}   utils.ErrorResponse
+// @Failure      500  {object}   utils.ErrorResponse
+// @Router       / [post]
 func (c *ClockInController) CreateClockIn(ctx *gin.Context) {
 	var req reqCreateClockIn
 
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
 	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
 	if authPayload.EmployeeID != req.EmployeeID {
 		err := errors.New("you do not have permission")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	reqEmployeeID, err := uuid.Parse(req.EmployeeID)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	prevClockIn, err := c.store.GetMostRecentClockIn(ctx, reqEmployeeID)
 	if err != nil && err != sql.ErrNoRows {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// 退出打刻しないまま出勤打刻している場合はエラー
 	if prevClockIn != (db.ClockIn{}) && !prevClockIn.ClockedOut {
 		err := errors.New("you have not clocked out yet")
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
 	clockIn, err := c.store.CreateClockIn(ctx, reqEmployeeID)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
