# backend/controllers/clockouts.controller.go
@@ -37,33 +37,33 @@ func (c *ClockOutController) CreateClockOut(ctx *gin.Context) {
 	var req reqCreateClockOut
 
 	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
 	authPayload := ctx.MustGet(middlewares.AuthorizationPayloadKey).(*token.Payload)
 	if authPayload.EmployeeID != req.EmployeeID {
 		err := errors.New("you do not have permission")
-		ctx.JSON(http.StatusUnauthorized, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusUnauthorized, utils.CreateErrorResponse(err))
 		return
 	}
 
 	reqEmployeeID, err := uuid.Parse(req.EmployeeID)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	prevClockIn, err := c.store.GetMostRecentClockIn(ctx, reqEmployeeID)
 	if err != nil && err != sql.ErrNoRows {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
 	// 出勤打刻していない場合はエラー
 	if prevClockIn == (db.ClockIn{}) || prevClockIn.ClockedOut {
 		err := errors.New("you have not clocked in yet")
-		ctx.JSON(http.StatusBadRequest, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusBadRequest, utils.CreateErrorResponse(err))
 		return
 	}
 
@@ -75,7 +75,7 @@ func (c *ClockOutController) CreateClockOut(ctx *gin.Context) {
 	// clockout transaction
 	result, err := c.store.ClockOutTx(ctx, arg)
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, utils.ErrorResponse(err))
+		ctx.JSON(http.StatusInternalServerError, utils.CreateErrorResponse(err))
 		return
 	}
 
